--- a/articles/en/another-article.mdx
+++ b/articles/en/another-article.mdx
@@ -1,1 +1,10 @@
+---
+title: "example"
+description: "${article.description}"
+date: "${article.date}"
+author: "${article.author}"
+tags: ${article.tags.join(', ')}
+published: ${article.published}
+---
+
 **Hello world!!!**
