--- a/articles/fr/another-articles.mdx
+++ b/articles/fr/another-articles.mdx
@@ -1,1 +1,10 @@
+---
+title: "example"
+description: "${article.description}"
+date: "${article.date}"
+author: "${article.author}"
+tags: ${article.tags.join(', ')}
+published: ${article.published}
+---
+
 Hello Markdown! `Tab` key uses default behavior
