--- a/articles/fr/example-article.mdx
+++ b/articles/fr/example-article.mdx
@@ -1,4 +1,11 @@
-
+---
+title: "example"
+description: "${article.description}"
+date: "${article.date}"
+author: "${article.author}"
+tags: ${article.tags.join(', ')}
+published: ${article.published}
+---
 **Hello world!!!**
 ```js
 function demo() {}
