--- a/articles/en/another-article.mdx
+++ b/articles/en/another-article.mdx
@@ -1,7 +1,7 @@
 ---
 title: "example"
 description: "${article.description}"
-date: "${article.date}"
+date: "27/09/2025"
 author: "${article.author}"
 tags: ${article.tags.join(', ')}
 published: ${article.published}
