--- a/articles/en/example-articles.mdx
+++ b/articles/en/example-articles.mdx
@@ -4,7 +4,7 @@ description: "${article.description}"
 date: "2025-09-24T17:48:26.081Z"
 author: "${article.author}"
 tags: ${article.tags.join(', ')}
-published: ${article.published}
+published: true
 ---
 
 <div markdown="1">
