--- a/articles/en/another-article.mdx
+++ b/articles/en/another-article.mdx
@@ -4,7 +4,7 @@ description: Ceci est la description de mon second article
 date: '2025-09-25'
 author: Ouraga Luai
 tags: 'tag-1, tag-2'
-published: false
+published: true
 ---
 
 **Hello world!!!**
