Update article: Deuxième article

--- a/articles/fr/example-articles.mdx
+++ b/articles/fr/example-articles.mdx
@@ -3,7 +3,7 @@ title: Deuxième article
 description: Description second
 date: '2025-09-25'
 author: OLuai
-tags: '${article.tags.join('', '')}'
+tags: tag-2
 published: true
 ---
 **Hello world!!!**
