Update article: Third Article

--- a/articles/en/third-article.mdx
+++ b/articles/en/third-article.mdx
@@ -17,3 +17,9 @@ you can navigate the cells with `enter`, `shift+enter`, `tab` and `shift+tab`.
 | SQL Hat           |   True   | 23.99 |
 | Codecademy Tee    |   False  | 19.99 |
 | Codecademy Hoodie |   False  | 42.99 |
+
+
+
+```python
+print("Hello world of code")
+```
