--- a/articles/fr/another-article.mdx
+++ b/articles/fr/another-article.mdx
@@ -5,6 +5,7 @@ date: '2025-09-25'
 author: OLuai
 tags: tag-1
 published: true
+name: premier test
 ---
 
 Hello Markdown! `Tab` key uses default behavior
