Update article: Second Article 0

--- a/articles/en/another-article.mdx
+++ b/articles/en/another-article.mdx
@@ -1,11 +1,10 @@
 ---
-title: Second Article
+name: premier test
+title: Second Article 0
 description: Ceci est la description de mon second article
 date: '2025-09-25'
 author: Ouraga Luai
 tags: 'tag-1, tag-2'
 published: true
-name: premier test
 ---
-
-**Hello world!!!**
+**Hello world!!! 0**
