Update article: Deuxieme Article 0

--- a/articles/fr/another-article.mdx
+++ b/articles/fr/another-article.mdx
@@ -1,11 +1,10 @@
 ---
-title: Deuxieme Article
+name: premier test
+title: Deuxieme Article 0
 description: Description en français
 date: '2025-09-25'
-author: OLuai
-tags: tag-1
+author: Ouraga Luai
+tags: 'tag-1, tag-2'
 published: true
-name: premier test
 ---
-
-Hello Markdown! `Tab` key uses default behavior
+Hello Markdown! `Tab` key uses default behavior 0
