--- a/articles/fr/mon-article.mdx
+++ b/articles/fr/mon-article.mdx
@@ -6,5 +6,13 @@ date: '2025-09-27'
 author: OLuai
 tags: merci
 published: false
+file:
+  name: 1758960049212_SOLIBRA_-_Assistante_Contr_le_QHSE.pdf
+  originalName: SOLIBRA - Assistante Contrôle QHSE.pdf
+  size: 109375
+  type: application/pdf
+  path: files/en/mon-article/1758960049212_SOLIBRA_-_Assistante_Contr_le_QHSE.pdf
+  downloadUrl: >-
+    https://raw.githubusercontent.com/OLuai/blog-jp/main/files/en/mon-article/1758960049212_SOLIBRA_-_Assistante_Contr_le_QHSE.pdf
 ---
 Contenu en français
