Update article: English title

--- a/articles/en/mon-article.mdx
+++ b/articles/en/mon-article.mdx
@@ -6,5 +6,13 @@ date: '2025-09-27'
 author: OLuai
 tags: merci
 published: false
+file:
+  name: mon-article_1758961179094.pdf
+  originalName: SOLIBRA - Assistante Contrôle QHSE.pdf
+  size: 109375
+  type: application/pdf
+  path: files/en/mon-article_1758961179094.pdf
+  downloadUrl: >-
+    https://raw.githubusercontent.com/OLuai/blog-jp/main/files/en/mon-article_1758961179094.pdf
 ---
 Contenu en anglais
