Update article: English title

--- a/articles/en/mon-article.mdx
+++ b/articles/en/mon-article.mdx
@@ -14,5 +14,6 @@ file:
   path: files/en/mon-article_1758961179094.pdf
   downloadUrl: >-
     https://raw.githubusercontent.com/OLuai/blog-jp/main/files/en/mon-article_1758961179094.pdf
+journalId: j1
 ---
 Contenu en anglais
