Update article: French title

--- a/articles/fr/mon-article.mdx
+++ b/articles/fr/mon-article.mdx
@@ -14,5 +14,6 @@ file:
   path: files/fr/mon-article_1758961190040.pdf
   downloadUrl: >-
     https://raw.githubusercontent.com/OLuai/blog-jp/main/files/fr/mon-article_1758961190040.pdf
+journalId: j1
 ---
 Contenu en français
