Update article: Test 1 (Anglais)

--- a/articles/en/premier-test.mdx
+++ b/articles/en/premier-test.mdx
@@ -4,8 +4,8 @@ title: Test 1 (Anglais)
 description: desc t1
 date: '2025-09-28'
 author: OLulu
-tags: ''
-type: ''
+tags: 'tag-1, tag-2'
+type: recherche
 published: true
 file:
   name: premier-test_1759040143331.pdf
@@ -15,5 +15,6 @@ file:
   path: files/articles/en/premier-test_1759040143331.pdf
   downloadUrl: >-
     https://raw.githubusercontent.com/OLuai/blog-jp/main/files/articles/en/premier-test_1759040143331.pdf
+journalId: j1
 ---
 Contenu en anglais
