Update article: Test 1 (Francais)

--- a/articles/fr/premier-test.mdx
+++ b/articles/fr/premier-test.mdx
@@ -4,8 +4,8 @@ title: Test 1 (Francais)
 description: d t1
 date: '2025-09-28'
 author: OLulu
-tags: ''
-type: ''
+tags: 'tag-1, tag-2'
+type: recherche
 published: true
 file:
   name: premier-test_1759040145407.png
@@ -15,5 +15,6 @@ file:
   path: files/articles/fr/premier-test_1759040145407.png
   downloadUrl: >-
     https://raw.githubusercontent.com/OLuai/blog-jp/main/files/articles/fr/premier-test_1759040145407.png
+journalId: j1
 ---
 Contenu en français
