Update article: Crypto Factor Model Presentation

--- a/articles/fr/test1.mdx
+++ b/articles/fr/test1.mdx
@@ -1,19 +1,19 @@
 ---
 name: test1
-title: title 1
-description: title 1
+title: Crypto Factor Model Presentation
+description: Crypto Factor Model Presentation
 date: '2025-09-29'
-author: title 1
+author: Ai For QuantResearch
 tags: ''
 type: ''
 published: true
 file:
-  name: test1_1759176258418.jpeg
-  originalName: _ (8).jpeg
-  size: 119501
-  type: image/jpeg
-  path: files/articles/fr/test1_1759176258418.jpeg
+  name: test1_1760281197086.pdf
+  originalName: Crypto_Factor_Model_Presentation.pdf
+  size: 2325066
+  type: application/pdf
+  path: files/articles/fr/test1_1760281197086.pdf
   downloadUrl: >-
-    https://raw.githubusercontent.com/OLuai/blog-jp/main/files/articles/fr/test1_1759176258418.jpeg
+    https://raw.githubusercontent.com/OLuai/blog-jp/main/files/articles/fr/test1_1760281197086.pdf
 ---
 Contenu en français
