--- a/articles/fr/test1.mdx
+++ b/articles/fr/test1.mdx
@@ -1,5 +1,5 @@
 ---
-name: test1
+name: Crypto Factor Model Presentation
 title: Crypto Factor Model Presentation
 description: Crypto Factor Model Presentation
 date: '2025-09-29'
