Update article: test fr

--- a/articles/fr/test.mdx
+++ b/articles/fr/test.mdx
@@ -6,7 +6,7 @@ date: '2025-11-20'
 author: OLuai
 tags: 'tag-1, tag-2'
 type: recherche
-published: false
+published: true
 file:
   name: test_1763657329800.pdf
   originalName: lettre_autorisation_volleyball.pdf
