Update article: title

--- a/articles/en/azerty.mdx
+++ b/articles/en/azerty.mdx
@@ -20,4 +20,4 @@ Resumé de la publication en anglais
 
 
 
-![](https://raw.githubusercontent.com/OLuai/blog-jp/main/public/images/articles/azerty_1763895755922.jpg)
+![](https://raw.githubusercontent.com/OLuai/blog-jp/main/public/images/articles/azerty_1763896543512.jpg "Amir")
